--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="https://hub.docker.com/u/linuxoid69">docker hub</a>
-    <a href="https://github.com/linuxoid69">github</a>
+    <a href="https://hub.docker.com/u/linuxoid69">
+        <img alt="Static Badge" src="https://img.shields.io/badge/docker_hub-linuxoid69-blue">
+    </a>
+    <a href="https://github.com/linuxoid69">
+        <img alt="Static Badge" src="https://img.shields.io/badge/github-linuxoid69-blue">
+    </a>
+    <a href="https://artifacthub.io/packages/search?user=linuxoid69&sort=relevance&page=1">
+        <img src="https://img.shields.io/endpoint?url=https://artifacthub.io/badge/repository/linuxoid69"
+            alt="artifacthub.io">
+    </a>
 </body>
+
 </html>
