--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE>
 <html lang="en">
 
 <head>
@@ -9,18 +10,16 @@
     <link rel="stylesheet" href="./static/mystyle.css">
 </head>
 
-
-
 <body style="background-color: rgb(12, 112, 162);">
 
-    <div class="container text-center mt-2000">
+    <div class="container text-center">
         <div class="row row-cols-1">
             <div class="col">
                 <h1>Welcome to my Page</h1>
                 <img width="150px" height="150px" src="./images/photo.jpeg" alt="I am"
-                    class="rounded-circle img-fluid mx-auto border">
-                <div id="block_about" class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    Hello everyone, my name is Rustam. I love to learn and discover something new.
+                    class="rounded-circle img-fluid mt-4 border">
+                <div id="block_about" class="mb-3 p-3 bg-body-tertiary rounded">
+                    Hello everyone, I'm Rustam. I love to learn and discover something new.
                     I believe that the meaning of a person's life is to learn throughout
                     their life and discover something new every day.
                     We are here to explore this world, no matter what it is like.
@@ -29,16 +28,18 @@
                 </div>
 
                 <a href="https://hub.docker.com/u/linuxoid69">
-                    <img alt="Static Badge" src="https://img.shields.io/badge/docker_hub-linuxoid69-blue">
+                    <img alt="docker profile" src="https://img.shields.io/badge/docker_hub-linuxoid69-blue">
                 </a>
                 <a href="https://github.com/linuxoid69">
-                    <img alt="Static Badge" src="https://img.shields.io/badge/github-linuxoid69-blue">
+                    <img alt="github account" src="https://img.shields.io/badge/github-linuxoid69-blue">
                 </a>
                 <a href="https://artifacthub.io/packages/search?user=linuxoid69&sort=relevance&page=1">
                     <img src="https://img.shields.io/endpoint?url=https://artifacthub.io/badge/repository/linuxoid69"
                         alt="artifacthub.io">
                 </a>
-
+                <a href="https://www.linkedin.com/in/rustam-tagaev-260426a9/">
+                    <img alt="linkedin" src="https://img.shields.io/badge/linkedIn-I'm-yellow">
+                </a>
             </div>
         </div>
     </div>
