--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <a href="https://www.linkedin.com/in/rustam-tagaev-260426a9/">
                     <img alt="linkedin" src="https://img.shields.io/badge/linkedIn-I'm-yellow">
                 </a>
+                <a href="https://www.codewars.com/users/linuxoid69">
+                    <img alt="linkedin" src="https://www.codewars.com/users/linuxoid69/badges/micro">
+                </a>
             </div>
         </div>
     </div>
